ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: harness.virtusa.dev
    http:
      paths:
      - path: /*
        backend:
          service:
            name: harness11
            port:
              number: 80
# Below lines to be uncommented if tls certificate is present and stored (select which to uncomment then: ctrl + /)
  # tls:
  # - secretName: harness-tls-cert
  #   hosts:
  #   - harness.virtusa.dev
